# Gorgonetics

./: .dockerignore  .env.docker  .env.example  .eslintrc.json  .firebaserc  .gitignore  AGENTS.md  CLAUDE.md  CONFIGURATION_DRIVEN_ATTRIBUTES.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE_NOTES.md  TESTING.md  biome.json  docker-compose.prod.yml  docker-compose.yml  emoji-test.html  eslint.config.js  firestore.rules  gorgonetics.db  metadata.sqlite  package-lock.json  package.json  pgbreeder.db  pgbreeder.db.wal  pitfalls.md  playwright.config.js  pnpm-lock.yaml  populate_database.py  pyproject.toml  pytest.ini  rendered.html  run_web_app.py  svelte.config.js  tailwind.config.js  test-docker.sh  test.sh  test_cattrs.py  (+4 more)
.chub/: .gitignore  config.yaml  pins.yaml
.chub/annotations/: eslint--eslint-plugin-testing-library.yaml  playwright--playwright.yaml  svelte--svelte.yaml  vite--vite.yaml  vitest--vitest.yaml
.chub/context/: architecture.md  ci-cd.md  data-model.md  gotchas.md  styling.md  testing.md
.chub/profiles/: base.yaml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  code-quality.yml  integration-tests.yml  integration.yml  pages.yml  release.yml
assets/: beewasp_genes_chr01.json
assets/beewasp/: beewasp_genes_chr01.json  beewasp_genes_chr02.json  beewasp_genes_chr03.json  beewasp_genes_chr04.json  beewasp_genes_chr05.json  beewasp_genes_chr06.json  beewasp_genes_chr07.json  beewasp_genes_chr08.json  beewasp_genes_chr09.json  beewasp_genes_chr10.json
assets/horse/: horse_genes_chr01.json  horse_genes_chr02.json  horse_genes_chr03.json  horse_genes_chr04.json  horse_genes_chr05.json  horse_genes_chr06.json  horse_genes_chr07.json  horse_genes_chr08.json  horse_genes_chr09.json  horse_genes_chr10.json  horse_genes_chr11.json  horse_genes_chr12.json  horse_genes_chr13.json  horse_genes_chr14.json  horse_genes_chr15.json  horse_genes_chr16.json  horse_genes_chr17.json  horse_genes_chr18.json  horse_genes_chr19.json  horse_genes_chr20.json  horse_genes_chr21.json  horse_genes_chr22.json  horse_genes_chr23.json  horse_genes_chr24.json  horse_genes_chr25.json  horse_genes_chr26.json  horse_genes_chr27.json  horse_genes_chr28.json  horse_genes_chr29.json  horse_genes_chr30.json  horse_genes_chr31.json  horse_genes_chr32.json  horse_genes_chr33.json  horse_genes_chr34.json  horse_genes_chr35.json  horse_genes_chr36.json  horse_genes_chr37.json  horse_genes_chr38.json  horse_genes_chr39.json  horse_genes_chr40.json  (+8 more)
docs/: API.md  CONFIGURATION_DRIVEN_ATTRIBUTES.md  DATABASE.md  DEVELOPMENT.md  DUCKLAKE_MULTIUSER.md  FRONTEND.md  README.md  RELEASE.md  TESTING.md  firebase-setup.md  index.html  index.md  quickstart.html  update-rollback.md
docs/design/: app-check-public-sharing-v2.md  breeding-assistant-v1.md  code-duplication-cleanup-plan.md  code-duplication-investigation.md  code-quality-improvements.md  deployment.md  flowbite-migration-baseline.md  flowbite-migration-plan.md  frontend-restructuring-plan.md  gene-rarity-lens-v1.md  public-pet-sharing-v1.md  redesign-library-workspace-v1.md
gamedata/: HorsePrimer.md
nbs/: GenomeJSON.ipynb
scripts/: capture-quickstart-screenshots.mjs  clean_test_artifacts.js  db-backup.sh  db-restore.sh  deploy-gcp.sh  extract_appearances.py  gen-gene-colors-css.mjs  generate-gene-templates.js  generate_gene_templates.py  generate_horse_appearance_cleanup.py  migrate_to_ducklake.py  monitor-spark-usage.mjs  populate_database.py  release.sh  run_client_tests.js  run_integration_tests.py  run_web_app.py  setup_ducklake.py  sync-bundled-assets.mjs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/assets/beewasp/: beewasp_genes_chr01.json  beewasp_genes_chr02.json  beewasp_genes_chr03.json  beewasp_genes_chr05.json  beewasp_genes_chr07.json  beewasp_genes_chr08.json  beewasp_genes_chr09.json  beewasp_genes_chr10.json
src-tauri/resources/assets/horse/: horse_genes_chr01.json  horse_genes_chr02.json  horse_genes_chr03.json  horse_genes_chr05.json  horse_genes_chr07.json  horse_genes_chr08.json  horse_genes_chr09.json  horse_genes_chr10.json  horse_genes_chr11.json  horse_genes_chr12.json  horse_genes_chr13.json  horse_genes_chr14.json  horse_genes_chr15.json  horse_genes_chr16.json  horse_genes_chr17.json  horse_genes_chr18.json  horse_genes_chr20.json  horse_genes_chr21.json  horse_genes_chr22.json  horse_genes_chr23.json  horse_genes_chr24.json  horse_genes_chr25.json  horse_genes_chr26.json  horse_genes_chr27.json  horse_genes_chr28.json  horse_genes_chr29.json  horse_genes_chr30.json  horse_genes_chr31.json  horse_genes_chr33.json  horse_genes_chr34.json  horse_genes_chr35.json  horse_genes_chr36.json  horse_genes_chr37.json  horse_genes_chr38.json  horse_genes_chr39.json  horse_genes_chr40.json  horse_genes_chr41.json  horse_genes_chr42.json  horse_genes_chr43.json  horse_genes_chr44.json  (+4 more)
src-tauri/resources/data/: Genes_BabyFaeBee178.txt  Genes_Roach.txt  Genes_SampleFaeBee.txt  Genes_SampleHorse.txt
src-tauri/src/: lib.rs  main.rs
src/gorgonetics/: __init__.py  __main__.py  attribute_config.py  cli.py  constants.py  database.py  database_config.py  ducklake_database.py  genome_parser.py  models.py  web_app.py
src/lib/: firebase.ts
src/pgbreeder/: __init__.py  cli.py  database.py  models.py  web_app.py
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/static/: styles.css
src/svelte/: App.svelte  index.html  main.js
test-results/: client-tests.json
tests/: __init__.py  check_pets.py  conftest.py  test_attribute_config.py  test_cli.py  test_main.py  test_models.py
tests/client/: README.md  setup.js  test-client-api.js  test-minimal.js  test-simple-client.js
tests/e2e/: app.spec.js  app.spec.ts  autoShare.spec.ts  backup.spec.js  (+33 more)
visualization/: .prettierrc.json  README.md  eslint.config.js  extract_gene_effects.py  gene_api.py  gene_effects_data.js  gene_effects_data.json  gene_viewer.html  lint.sh  package-lock.json  package.json  pgbreeder.db
(+346 files in other folders)
