[project]
name = "gorgonetics"
version = "0.1.0"
description = "Gorgon genetics breeding tool for Project Gorgon"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "duckdb>=1.3.1",
    "polars>=1.31.0",
    "narwhals>=1.45.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "slowapi>=0.0.6",
]
authors = [{ name = "Javier Lopez Pena", email = "jlopezpena@users.noreply.github.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "typos>=1.20.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ty>=0.0.1a13",
]

[project.scripts]
gorgonetics = "gorgonetics.cli:app"

[build-system]
requires = ["uv_build>=0.7.2,<1"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "typos>=1.20.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ty>=0.0.1a13",
    "ipython>=8.18.1",
    "jupyter>=1.1.1",
]

[tool.ruff]
line-length = 120
target-version = "py313"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ARG", "FBT"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty.rules]
# Starlette add_middleware typing is incompatible with ty's analysis
invalid-argument-type = "warn"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
