[package]
name = "gorgonetics"
version = "0.3.0"
description = "Gorgonetics - Pet Genetics Breeding Tool"
authors = ["Javier Lopez Pena"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "gorgonetics_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "s"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
