[package]
name = "gorgonetics"
version = "0.7.0"
description = "Gorgonetics - Pet Genetics Breeding Tool"
authors = ["Javier Lopez Pena"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "gorgonetics_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "s"

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
# Used by the db_execute_transaction command to access sqlx's transaction
# API directly — tauri-plugin-sql exposes only per-statement execute(),
# so multi-statement atomicity needs a custom command (see issue #153).
sqlx = { version = "0.9", default-features = false, features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1", features = ["sync"] }
# write_zip streams the backup archive to disk so a large image library is
# never fully resident in the webview's JS heap (issue #92). Stored-only:
# images are already-compressed PNG/JPEG, so deflate buys nothing and we skip
# the flate2 dependency.
zip = { version = "8", default-features = false }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
